Resolved Issue #3. When putBomList is shown, all sections in home page will fade out to behind the putBomList

--- a/css/style.css
+++ b/css/style.css
@@ -290,7 +290,7 @@ img.menu-item {
     position: absolute;
     bottom: 0px;
 }
-.ATF-deco.fade {
+.fade {
     opacity: 0.2;
 }
 .ATF-deco img {
